# ap_otus

./: .gitignore  README.md
.github/workflows/: check-jobs.yml
HW_01/: README.md  pyproject.toml
HW_01/src/: utils.py
HW_01/tests/: test_solve.py
additional/: go.mod  makefile
additional/internal/models/angle/: angle.go
additional/internal/models/vector/: vector.go
additional/internal/objects/space_ship/: spaceship.go  spaceship_test.go
additional/internal/objects/spaceship/: spaceship.go  spaceship_test.go
additional/internal/services/cmd/: cmd.go  errors.go
additional/internal/services/cmd/change_velocity/: change_velocity.go
additional/internal/services/cmd/forward_motion/: forward_motion.go
additional/internal/services/cmd/log/: log.go  log_test.go
additional/internal/services/cmd/macros/: macros.go  macros_test.go
additional/internal/services/moving/: moving.go  moving_test.go
additional/internal/services/refueling/: refueling.go
additional/internal/services/rotating/: rotating.go  rotating_test.go
additional/tests/integration/: cmd_change_velocity_test.go  cmd_rotate_velocity_test.go  cmd_test.go
main/: README.md  makefile  pyproject.toml
main/src/server/: errors.py  models.py  types.py
main/src/server/cmd/: forward_motion.py  log.py  macros.py  move.py  refuel.py  repeat.py  rotate.py  velocity.py
main/src/server/interfaces/: cmd.py  movable.py  refuelinge.py  rotable.py  rotatable.py
main/src/server/logic/: ioc.py  mixins.py  movable.py  refuelinge.py  rotable.py  rotatable.py  ships.py
main/tests/: conftest.py  test_movable.py  test_rotable.py
main/tests/test_cmd/: test_cmd_queue.py  test_forward_motion.py  test_log.py  test_macros.py  test_move.py  test_refuel.py  test_repeat.py  test_rotate.py  test_velocity.py
main/tests/test_logic/: test_ioc.py  test_ioc_threads.py  test_movable.py  test_refuiling.py  test_rotatable.py
(+11 files in other folders)
